[gd_scene load_steps=34 format=4 uid="uid://dkm5w4ukgrpgf"]

[ext_resource type="Script" uid="uid://dw6w3lvrh2ggp" path="res://Scripts/Start.gd" id="1_x8hsg"]
[ext_resource type="Script" uid="uid://ciflnc7p46rqm" path="res://Scripts/Data/TileMapLayerWithCustomCellData.gd" id="3_blwqs"]
[ext_resource type="Script" uid="uid://65agal3il42" path="res://Tests/TurnBased/TurnBasedTestUIEntity.gd" id="3_orv1y"]
[ext_resource type="Script" uid="uid://unl3pbfwqcqt" path="res://Entities/TurnBased/TurnBasedEntity.gd" id="3_udncs"]
[ext_resource type="PackedScene" uid="uid://di0bbc075e41l" path="res://Components/TurnBased/TurnBasedTileBasedControlComponent.tscn" id="4_3bh2s"]
[ext_resource type="Texture2D" uid="uid://u7227vs57eyx" path="res://Assets/Tiles/Kenney1Bit-Monochrome.png" id="4_k2j6v"]
[ext_resource type="Texture2D" uid="uid://cygvb20buqi2q" path="res://Assets/Images/DebugCheckerboard16.png" id="4_mkbvj"]
[ext_resource type="PackedScene" uid="uid://dc30psrpymtkr" path="res://Components/TurnBased/TurnBasedStateUIComponent.tscn" id="5_178cw"]
[ext_resource type="PackedScene" uid="uid://b8evr41o1p0ea" path="res://Tests/TurnBased/TurnBasedTestComponent.tscn" id="5_253pd"]
[ext_resource type="PackedScene" uid="uid://bdmibnkkrpfhv" path="res://Components/Movement/TileBasedPositionComponent.tscn" id="5_hle8a"]
[ext_resource type="FontFile" uid="uid://cbowgwltqkamb" path="res://Assets/Fonts/PixelOperator8-Bold.ttf" id="9_tlr5a"]
[ext_resource type="PackedScene" uid="uid://c5rfeug8xxxho" path="res://Components/TurnBased/TurnBasedAnimationComponent.tscn" id="12_178cw"]
[ext_resource type="Material" uid="uid://b3pgi66bf5g2e" path="res://Assets/Materials/AddUnshaded.tres" id="12_s804s"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_36c63"]
texture = ExtResource("4_mkbvj")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0/custom_data_0 = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3hkm5"]
texture = ExtResource("4_mkbvj")
0:0/0 = 0
0:0/0/custom_data_0 = true

[sub_resource type="TileSet" id="TileSet_usjrl"]
physics_layer_0/collision_layer = 0
physics_layer_0/collision_mask = 0
custom_data_layer_0/name = "isWalkable"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "isBlocked"
custom_data_layer_1/type = 1
sources/2 = SubResource("TileSetAtlasSource_36c63")
sources/3 = SubResource("TileSetAtlasSource_3hkm5")

[sub_resource type="LabelSettings" id="LabelSettings_vvp6u"]
font = ExtResource("9_tlr5a")
font_color = Color(0, 1, 0, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 0.5)

[sub_resource type="LabelSettings" id="LabelSettings_5kxpx"]
font = ExtResource("9_tlr5a")
font_color = Color(1, 1, 0, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 0.5)

[sub_resource type="LabelSettings" id="LabelSettings_y0qcc"]
font = ExtResource("9_tlr5a")
font_color = Color(1, 0, 0, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 0.5)

[sub_resource type="Animation" id="Animation_ivwxp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LabelsMarginContainer/VBoxContainer/BeginLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LabelsMarginContainer:theme_override_constants/margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-100]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("LabelsMarginContainer/VBoxContainer/BeginLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LabelsMarginContainer/VBoxContainer/BeginLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_tyb1r"]
resource_name = "showBeginLabel"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("LabelsMarginContainer/VBoxContainer/BeginLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(8, 8), Vector2(8, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LabelsMarginContainer:theme_override_constants/margin_left")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [-100, 8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LabelsMarginContainer/VBoxContainer/BeginLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LabelsMarginContainer/VBoxContainer/BeginLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fujdc"]
_data = {
&"RESET": SubResource("Animation_ivwxp"),
&"showBeginLabel": SubResource("Animation_tyb1r")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sg2kd"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2l622"]
atlas = ExtResource("4_k2j6v")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3uip"]
atlas = ExtResource("4_k2j6v")
region = Rect2(464, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_178cw"]
atlas = ExtResource("4_k2j6v")
region = Rect2(640, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwalo"]
atlas = ExtResource("4_k2j6v")
region = Rect2(560, 192, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_nwalo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2l622")
}],
"loop": true,
"name": &"RESET",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3uip")
}],
"loop": true,
"name": &"turnBegin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_178cw")
}],
"loop": true,
"name": &"turnEnd",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwalo")
}],
"loop": true,
"name": &"turnUpdate",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_178cw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"RESET"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_2l622"]
resource_name = "turnBegin"
length = 3.0
step = 1.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"turnBegin"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0666667),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_h3uip"]
resource_name = "turnEnd"
length = 3.0
step = 1.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"turnEnd"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0666667),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.5, 0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_s804s"]
resource_name = "turnUpdate"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"turnUpdate"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0666667),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_178cw"]
_data = {
&"RESET": SubResource("Animation_178cw"),
&"turnBegin": SubResource("Animation_2l622"),
&"turnEnd": SubResource("Animation_h3uip"),
&"turnUpdate": SubResource("Animation_s804s")
}

[node name="TurnBasedTest" type="Node2D"]
script = ExtResource("1_x8hsg")

[node name="BackgroundTileMap" type="TileMapLayer" parent="."]
modulate = Color(0.5, 1, 1, 0.5)
position = Vector2(-16, -16)
tile_map_data = PackedByteArray("AAABAAEAAwAAAAAAAAADAAEAAwAAAAAAAAACAAIAAwAAAAAAAAABAAMAAwAAAAAAAAABAAUAAwAAAAAAAAACAAQAAwAAAAAAAAADAAMAAwAAAAAAAAAEAAIAAwAAAAAAAAAFAAEAAwAAAAAAAAAHAAEAAwAAAAAAAAAGAAIAAwAAAAAAAAAFAAMAAwAAAAAAAAAEAAQAAwAAAAAAAAADAAUAAwAAAAAAAAACAAYAAwAAAAAAAAABAAcAAwAAAAAAAAABAAkAAwAAAAAAAAACAAgAAwAAAAAAAAADAAcAAwAAAAAAAAAEAAYAAwAAAAAAAAAFAAUAAwAAAAAAAAAGAAQAAwAAAAAAAAAHAAMAAwAAAAAAAAAIAAIAAwAAAAAAAAAJAAEAAwAAAAAAAAALAAEAAwAAAAAAAAAKAAIAAwAAAAAAAAAJAAMAAwAAAAAAAAAIAAQAAwAAAAAAAAAHAAUAAwAAAAAAAAAGAAYAAwAAAAAAAAAFAAcAAwAAAAAAAAAEAAgAAwAAAAAAAAADAAkAAwAAAAAAAAACAAoAAwAAAAAAAAABAAsAAwAAAAAAAAADAAsAAwAAAAAAAAAEAAoAAwAAAAAAAAAFAAkAAwAAAAAAAAAGAAgAAwAAAAAAAAAHAAcAAwAAAAAAAAAIAAYAAwAAAAAAAAAJAAUAAwAAAAAAAAAKAAQAAwAAAAAAAAALAAMAAwAAAAAAAAALAAUAAwAAAAAAAAAKAAYAAwAAAAAAAAAJAAcAAwAAAAAAAAAIAAgAAwAAAAAAAAAHAAkAAwAAAAAAAAAGAAoAAwAAAAAAAAAFAAsAAwAAAAAAAAAHAAsAAwAAAAAAAAAIAAoAAwAAAAAAAAAJAAkAAwAAAAAAAAAKAAgAAwAAAAAAAAALAAcAAwAAAAAAAAALAAkAAwAAAAAAAAAKAAoAAwAAAAAAAAAJAAsAAwAAAAAAAAALAAsAAwAAAAAAAAA=")
tile_set = SubResource("TileSet_usjrl")
script = ExtResource("3_blwqs")

[node name="TerrainTileMap" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD/////AgAAAAAAAAD//wAAAgAAAAAAAAD//wEAAgAAAAAAAAD//wIAAgAAAAAAAAD//wMAAgAAAAAAAAD//wQAAgAAAAAAAAAAAP//AgAAAAAAAAABAP//AgAAAAAAAAACAP//AgAAAAAAAAADAP//AgAAAAAAAAAEAP//AgAAAAAAAAAFAP//AgAAAAAAAAAGAP//AgAAAAAAAAAHAP//AgAAAAAAAAAIAP//AgAAAAAAAAAJAP//AgAAAAAAAAAKAP//AgAAAAAAAAALAP//AgAAAAAAAAALAAAAAgAAAAAAAAALAAEAAgAAAAAAAAALAAIAAgAAAAAAAAALAAMAAgAAAAAAAAALAAQAAgAAAAAAAAALAAUAAgAAAAAAAAALAAYAAgAAAAAAAAALAAcAAgAAAAAAAAALAAgAAgAAAAAAAAALAAkAAgAAAAAAAAALAAoAAgAAAAAAAAALAAsAAgAAAAAAAAAKAAsAAgAAAAAAAAAJAAsAAgAAAAAAAAAIAAsAAgAAAAAAAAAHAAsAAgAAAAAAAAAGAAsAAgAAAAAAAAAFAAsAAgAAAAAAAAAEAAsAAgAAAAAAAAADAAsAAgAAAAAAAAACAAsAAgAAAAAAAAABAAsAAgAAAAAAAAAAAAsAAgAAAAAAAAD//wsAAgAAAAAAAAD//woAAgAAAAAAAAD//wkAAgAAAAAAAAD//wgAAgAAAAAAAAD//wcAAgAAAAAAAAD//wYAAgAAAAAAAAD//wUAAgAAAAAAAAA=")
tile_set = SubResource("TileSet_usjrl")

[node name="TurnBasedUIEntity" type="Node2D" parent="."]
script = ExtResource("3_orv1y")
debugMode = true

[node name="TurnBasedStateUIComponent" parent="TurnBasedUIEntity" instance=ExtResource("5_178cw")]

[node name="TurnBasedUI" type="CanvasLayer" parent="TurnBasedUIEntity"]
layer = 90

[node name="LabelsMarginContainer" type="MarginContainer" parent="TurnBasedUIEntity/TurnBasedUI"]
offset_right = 67.0
offset_bottom = 32.0
theme_override_constants/margin_left = -100
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="TurnBasedUIEntity/TurnBasedUI/LabelsMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BeginLabel" type="Label" parent="TurnBasedUIEntity/TurnBasedUI/LabelsMarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
text = "TURN START"
label_settings = SubResource("LabelSettings_vvp6u")

[node name="UpdateLabel" type="Label" parent="TurnBasedUIEntity/TurnBasedUI/LabelsMarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "MOVE"
label_settings = SubResource("LabelSettings_5kxpx")

[node name="EndLabel" type="Label" parent="TurnBasedUIEntity/TurnBasedUI/LabelsMarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "SHUTDOWN"
label_settings = SubResource("LabelSettings_y0qcc")

[node name="BottomCenterContainer" type="CenterContainer" parent="TurnBasedUIEntity/TurnBasedUI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -32.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="TurnBasedUIEntity/TurnBasedUI/BottomCenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 32

[node name="NextTurnButton" type="Button" parent="TurnBasedUIEntity/TurnBasedUI/BottomCenterContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "»TURN»"

[node name="UITimer" type="Timer" parent="TurnBasedUIEntity/TurnBasedUI"]
unique_name_in_owner = true
one_shot = true

[node name="UIAnimationPlayer" type="AnimationPlayer" parent="TurnBasedUIEntity/TurnBasedUI"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_fujdc")
}

[node name="TurnBasedEntity1" type="RigidBody2D" parent="." groups=["entities", "players", "turnBased"]]
position = Vector2(88, 88)
collision_layer = 2
collision_mask = 16
gravity_scale = 1.66533e-16
script = ExtResource("3_udncs")
debugMode = true
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="TurnBasedEntity1" groups=["players"]]
texture = ExtResource("4_k2j6v")
region_enabled = true
region_rect = Rect2(560, 288, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurnBasedEntity1"]
shape = SubResource("RectangleShape2D_sg2kd")

[node name="Camera2D" type="Camera2D" parent="TurnBasedEntity1"]
process_callback = 0
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="TurnBasedTestComponent" parent="TurnBasedEntity1" instance=ExtResource("5_253pd")]
debugMode = true

[node name="TurnBasedTileBasedControlComponent" parent="TurnBasedEntity1" instance=ExtResource("4_3bh2s")]
debugMode = true

[node name="TileBasedPositionComponent" parent="TurnBasedEntity1" node_paths=PackedStringArray("tileMap") instance=ExtResource("5_hle8a")]
tileMap = NodePath("../../BackgroundTileMap")
initialDestinationCoordinates = Vector2i(6, 6)
speed = 50.0
debugMode = true

[node name="TurnBasedEntity2" type="RigidBody2D" parent="." groups=["entities", "players", "turnBased"]]
position = Vector2(88, 120)
collision_layer = 2
collision_mask = 16
gravity_scale = 1.66533e-16
script = ExtResource("3_udncs")
debugMode = true
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="TurnBasedEntity2" groups=["players"]]
texture = ExtResource("4_k2j6v")
region_enabled = true
region_rect = Rect2(576, 288, 16, 16)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TurnBasedEntity2"]
material = ExtResource("12_s804s")
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_nwalo")
animation = &"RESET"
autoplay = "RESET"

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurnBasedEntity2"]
shape = SubResource("RectangleShape2D_sg2kd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TurnBasedEntity2"]
libraries = {
&"": SubResource("AnimationLibrary_178cw")
}

[node name="TurnBasedAnimationComponent" parent="TurnBasedEntity2" node_paths=PackedStringArray("animationNode") instance=ExtResource("12_178cw")]
animationNode = NodePath("../AnimationPlayer")
animationForTurnDidBegin = &""

[node name="TurnBasedTileBasedControlComponent" parent="TurnBasedEntity2" instance=ExtResource("4_3bh2s")]
randomMovement = true
debugMode = true

[node name="TileBasedPositionComponent" parent="TurnBasedEntity2" node_paths=PackedStringArray("tileMap") instance=ExtResource("5_hle8a")]
tileMap = NodePath("../../BackgroundTileMap")
initialDestinationCoordinates = Vector2i(8, 8)
speed = 50.0
debugMode = true

[connection signal="pressed" from="TurnBasedUIEntity/TurnBasedUI/BottomCenterContainer/MarginContainer/NextTurnButton" to="TurnBasedUIEntity" method="onNextTurnButton_pressed"]
